# intmax2-zkp

./: .gitignore  Cargo.toml  README.md  coverage.sh  file-coverage.sh  rustfmt.toml  webdriver.json
examples/: generate_data.rs  simple_proof.rs  validity_witness.rs
src/: constants.rs  lib.rs  types.rs
src/circuits/: mod.rs
src/circuits/balance/: balance_circuit.rs  balance_pis.rs  balance_processor.rs  error.rs  mod.rs  spent_circuit.rs
src/circuits/claim/: deposit_time.rs  determine_lock_time.rs  error.rs  mod.rs  single_claim_circuit.rs  single_claim_processor.rs  single_claim_proof.rs  start_time.rs  utils.rs
src/circuits/fraud/: fraud_circuit.rs  fraud_processor.rs  mod.rs
src/circuits/mining/: determine_lock_time.rs  mod.rs  simple_withraw_circuit.rs  start_time.rs  wrapper.rs
src/circuits/proof_of_innocence/: address_list.rs  error.rs  innocence_circuit.rs  innocence_inner_circuit.rs  innocence_inner_target.rs  innocence_processor.rs  innocence_wrap_circuit.rs  mod.rs
src/circuits/staking/: determine_lock_time.rs  mod.rs
src/circuits/test_utils/: mod.rs  state_manager.rs  wallet.rs  witness_generator.rs
src/circuits/utils/: cyclic.rs  mod.rs
src/circuits/validity/: error.rs  mod.rs  validity_circuit.rs  validity_pis.rs  validity_processor.rs
src/circuits/withdrawal/: error.rs  mod.rs  single_withdrawal_circuit.rs  withdrawal_circuit.rs  withdrawal_inner_circuit.rs  withdrawal_processor.rs  withdrawal_wrapper_circuit.rs  withdrawal_wrapper_processor.rs
src/common/: block.rs  block_builder.rs  claim.rs  deposit.rs  enough_balance_flags.rs  error.rs  generic_address.rs  hash.rs  insufficient_flags.rs  local_state.rs  mod.rs  private_state.rs  public_state.rs  salt.rs  transfer.rs  tx.rs  withdrawal.rs
src/common/signature/: block_sign_payload.rs  flatten.rs  format_validation.rs  key_set.rs  mod.rs  serialize.rs  sign.rs  sign_tools.rs  utils.rs  verify.rs
src/common/signature_content/: aggregation_validation.rs  block_sign_payload.rs  error.rs  flatten.rs  format_validation.rs  key_set.rs  mod.rs  sign_tools.rs  utils.rs
src/common/trees/: account_tree.rs  asset_tree.rs  block_hash_tree.rs  deposit_tree.rs  mod.rs  nullifier_tree.rs  sender_tree.rs  transfer_tree.rs  tx_tree.rs
src/common/witness/: balance_incoming_witness.rs  block_witness.rs  claim_witness.rs  deposit_time_witness.rs  deposit_witness.rs  full_block.rs  mod.rs  private_state_transition_witness.rs  private_transition_witness.rs  private_witness.rs  receive_deposit_witness.rs  receive_transfer_witness.rs  send_witness.rs  spent_witness.rs  transfer_witness.rs  transition_witness.rs  tx_witness.rs  update_public_state_witness.rs  update_witness.rs  validity_witness.rs  (+2 more)
src/ethereum_types/: account_id.rs  account_id_packed.rs  address.rs  bytes16.rs  bytes32.rs  error.rs  mod.rs  u128.rs  u256.rs  u32limb_trait.rs  u64.rs
src/mock/: balance_logic.rs  balance_manager.rs  balance_prover.rs  block_builder.rs  block_validity_prover.rs  client.rs  contract.rs  data_store_server.rs  db.rs  error.rs  full_block.rs  full_private_state.rs  helper.rs  local_manager.rs  mod.rs  store_vault_server.rs  strategy.rs  sync_balance_prover.rs  sync_sender_prover.rs  sync_strategy.rs  sync_validity_prover.rs  tx_request.rs  wallet.rs  withdrawal_aggregator.rs
src/test_utils/: account_tree.rs  mod.rs  signature.rs  tx.rs  validity_proof.rs
src/utils/: circuit_verifiers.rs  conversion.rs  cyclic.rs  dummy.rs  error.rs  leafable.rs  leafable_hasher.rs  logic.rs  mod.rs  poseidon_hash_out.rs  recursivable.rs  recursively_verifiable.rs  save.rs  serialize.rs  serializer.rs  wrapper.rs
src/wrapper_config/: plonky2_config.rs  poseidon_bn128.rs  poseidon_bn128_constants.rs  utils.rs
test_data/: faster_single_claim.json  receive_deposit.json  receive_transfer.json  send.json  single_claim.json  spent.json  update.json  withdrawal.json
tests/: e2e.rs  generate_test_data.rs  save_blocks.rs  wasm_bench.rs
(+92 files in other folders)
