[package]
name = "intmax2-zkp"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
plonky2 = { git = "https://github.com/InternetMaximalism/polygon-plonky2.git", branch = "intmax2-dev", default-features = false }
plonky2_u32 = { git = "https://github.com/InternetMaximalism/plonky2-u32.git", branch = "intmax2-dev", default-features = false }
plonky2_keccak = { git = "https://github.com/InternetMaximalism/plonky2_keccak", branch = "wasm", default-features = false }
plonky2_bn254 = { git = "https://github.com/InternetMaximalism/plonky2_bn254", branch = "wasm", default-features = false }
hex = "0.4.3"
rand = "0.8.5"
anyhow = "1.0.97"
itertools = "0.12.1"
thiserror = "1.0.57"
log = "0.4.21"
num = "0.4.3"
num-bigint = "0.4.5"
ark-bn254 = "0.4.0"
ark-ec = "0.4.2"
ark-ff = "0.4.2"
ark-std = "0.4.0"
serde = "1.0.219"
serde_json = "1.0.140"
ff = { package = "ff", version = "0.13", features = ["derive"] }
lazy_static = "1.5.0"
bincode = "1.3.3"
base64 = "0.22.1"

getrandom = { version = "0.3", features = ["wasm_js"] }
wasm-bindgen = "0.2"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Performance", "Window"] }

[patch."https://github.com/InternetMaximalism/polygon-plonky2.git"]
plonky2 = { path = "../polygon-plonky2/plonky2" }

[dev-dependencies]
wasm-bindgen-test = "0.3"
wasm-bindgen-futures = "0.4"

[features]
# default = []
default = ["plonky2/default"]
dummy_validity_proof = []
skip_insufficient_check = []

# WASM optimization profiles
# [profile.release]
# opt-level = 3
# lto = true
# codegen-units = 1

# [profile.dev.package."*"]
# opt-level = 3

# [profile.dev]
# opt-level = 1
